# ci-cd-playground

./: pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: bg-deploy.yaml  canary-deploy.yaml
some_project_name/airflow/dags/: example-dag.py
some_project_name/airflow/plugins/local_module/utils/: adwords.py
