[tool.poetry]
name = "archie-data-pipelines"
version = "0.1.2"
description = "Trafilea repository containing the files required for Airflow to execute the pipelines"
authors = ["Business Intelligence Team <bi@trafilea.com>", "Data Science Intelligence Team <ds@trafilea.com>"]
readme = "README.md"
packages = [
    { include = "archie" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
awswrangler = "2.10.0"
bingads = "<=13.0.16"
envparse = "<=0.2.0"
google-api-core = "<=2.12.0"
google-api-python-client = "<=2.106.0"
google-cloud-bigquery = ">=3.1.0,<=3.14.1"
google-auth = "<=2.23.4"
google-ads = ">=21.2.0,<=22.1.0"
jaydebeapi = "<=1.2.3"
openpyxl = "<=3.1.2"
pandas = "<=1.3.5"
psycopg2-binary = "^2.9.9"
pydantic = "1.10.2"
pysftp = "<=0.2.9"
python-dotenv = "^1.0.1"
redash-api-client = "<=0.3.0"
slack-sdk = "<=3.19.1"
suds = "<=1.1.2"
tableauserverclient = "<=0.24"
xmltodict = "<=0.13.0"
apache-airflow = "2.7.3"
apache-airflow-providers-cncf-kubernetes = "^8.3.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pre-commit = "^3.1.1"
pytest  = "^7.3.1"
pytest-env = "^0.8.1"
pytest-mock = ">=3.10"
tox = ">=4.2.0,<4.2.7"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-p no:warnings"
testpaths = ["tests"]
# For the env version to be picked up, you need to install the package pytest-env
env = [
    "API_AUTH_USER=test",
    "API_AUTH_PASSWORD=test"
]
pythonpath = ["archie"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
